[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uintlib"
version = "2.0.0"
description = "A Python package to easily use uints/ints in Python. "
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }

authors = [
  { name = "rraptor06" }
]

keywords = ["python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
py-modules = ["int", "uint", "streams"]